css/styles.css
body {
    background-color: #faf6d7;
    font-family: 'Inter', sans-serif;
    padding: 20px;
  }
  
  h1, h2 {
    font-family: 'Inter', sans-serif;
    font-weight: 700;
    color: #0a0a0a;
  }

  
  .navbar-brand {
    font-weight: 700;
  }
  
  .card {
    cursor: pointer;
  }
  
  .collapse-section {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease;
  }
  
  .collapse-section.open {
    max-height: 300px;
  }

  .footer {
    text-align: center;
    padding: 20px 0;
    color: #333;
    font-size: 0.9rem;
  }
  
  .footer-divider {
    width: 80%;
    margin: 0 auto 10px auto;
    border: 0;
    border-top: 2px solid #0f1010;
    opacity: 0.5;
  }

  .card p {
    font-size: 1.05rem;
    margin-bottom: 12px;
  }
  
  .card i {
    font-size: 1.2rem;
    vertical-align: middle;
  }
  
  .card a:hover {
    text-decoration: underline;
  }

  .section-divider {
    width: 80%;
    border: 1px solid #111010;
    margin-top: 1.5rem;
    margin-bottom: 2.5rem;
  }
  
  .about-section {
    max-width: 800px;
    margin: 0 auto;
    line-height: 1.8;
    font-size: 1.05rem;
    font-family: 'Inter', sans-serif;
    color: #222;
  }
  
  .custom-list {
    list-style: disc;
    color: #0a0a0a;
    padding-left: 1.1rem;
  }
  
  .custom-list li {
    margin-bottom: 1.5rem;
    font-family: 'Nunito', sans-serif;
    font-size: 0.90rem;
    line-height: 1.8;
    color: #111;
    letter-spacing: 0.25px;
  }
  
  /* Extra space above the "Previously" heading */
  .about-section .mt-4 {
    margin-top: 1rem !important;
  }
  
  /* Add more space below the name heading */
    .container.text-center h1 {
        margin-bottom: 0.75rem;
    }

  .container.text-center .lead {
    color: #444;
    font-size: 1.05rem;
  }

